@@ -45,6 +45,7 @@ click-to-view=Click to view details.
 close-quick-reference=Close quick reference panel
 crafter=Crafter
 crafting-categories=Crafting categories:
+crafting-speed=Crafting speed:
 crafting-time=Crafting time:
 favorites=Favorites
 fixed-recipe=Fixed recipe:
