@@ -4,6 +4,7 @@ Date: ????
   Features:
     - Added setting to disable the green "alternate name" in object tooltips
     - Added `usable in` list to the material page, listing the labs that that science pack is usable in
+    - Added crafting speed and crafting categories to crafter tooltips
     - Added ingredients and products to recipe tooltips
   Changes:
     - Characters are now properly detected and included as crafters, instead of being hard-coded
